packages/jsii/test/negatives/neg.method-name.4.ts
export class MyClass {
  public setFoo(_value: string) {
    return 'hi';
  }
}
